# wlb-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  taskData.json  wlbSettings.json
src/: cmd_args.rs  logic.rs  main.rs  parser.rs  shared.rs
