[package]
name = "wlb-cli"
version = "0.1.0"
description = "The Work Life Balance calculator time tracks & displays daily percentages of tasks "
edition = "2021"
author = ["Ivycap"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ivycap"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
colored = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
